//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  fullname String
  username String [not null]
  role Role [not null]
  initialSetupComplete Boolean [not null, default: false]
  anonymousDataCollection Boolean [not null, default: false]
  usersOnWorkspaces UsersOnWorkspaces [not null]
  template Template [not null]
  createdBy Issue [not null]
}

Table Workspace {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted DateTime
  name String [not null]
  slug String [unique, not null]
  icon String
  usersOnWorkspaces UsersOnWorkspaces [not null]
  team Team [not null]
  label Label [not null]
  template Template [not null]
  syncAction SyncAction [not null]
  integrationAccount IntegrationAccount [not null]
}

Table UsersOnWorkspaces {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  workspace Workspace [not null]
  userId String [not null]
  workspaceId String [not null]
  teamIds String[] [not null]
  status Status [not null, default: 'ACTIVE']

  indexes {
    (userId, workspaceId) [unique]
  }
}

Table Team {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted DateTime
  name String [not null]
  identifier String [not null]
  icon String
  workspace Workspace [not null]
  workspaceId String [not null]
  issue Issue [not null]
  label Label [not null]
  template Template [not null]
  workflow Workflow [not null]
  teamPreference TeamPreference [not null]

  indexes {
    (name, identifier, workspaceId) [unique]
  }
}

Table Label {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted DateTime
  name String [not null]
  color String [not null]
  description String
  workspace Workspace [not null]
  workspaceId String [not null]
  team Team
  teamId String
  group Label
  groupId String
  labels Label [not null]
}

Table Template {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted DateTime
  name String [not null]
  category TemplateCategory [not null]
  templateData Json [not null]
  createdBy User [not null]
  createdById String [not null]
  workspace Workspace [not null]
  workspaceId String [not null]
  team Team
  teamId String
}

Table Workflow {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted DateTime
  name String [not null]
  position Int [not null]
  color String [not null]
  category WorkflowCategory [not null]
  team Team
  teamId String [not null]
}

Table TeamPreference {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted DateTime
  team Team
  teamId String [not null]
  preference Preference [not null]
  value String [not null]

  indexes {
    (teamId, preference) [unique]
  }
}

Table SyncAction {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted DateTime
  modelName ModelName [not null]
  modelId String [not null]
  action ActionType [not null]
  sequenceId Int [not null]
  workspace Workspace [not null]
  workspaceId String [not null]

  indexes {
    (modelId, action) [unique]
  }
}

Table Issue {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted DateTime
  title String [not null]
  number Int [not null]
  description String [not null]
  priority Int
  dueDate DateTime
  sortOrder Int [not null]
  subIssueSortOrder Int
  estimate Int
  team Team [not null]
  teamId String [not null]
  createdBy User [not null]
  createdById String [not null]
  subscriberIds String[] [not null]
  assigneeId String
  labelIds String[] [not null]
  stateId String [not null]
  parent Issue
  parentId String
  subIssue Issue [not null]
  comments IssueComment [not null]
  history IssueHistory [not null]

  indexes {
    (teamId, number) [unique]
  }
}

Table IssueComment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted DateTime
  body String [not null]
  userId String [not null]
  reactions Reaction [not null]
  reactionsData Json[] [not null]
  issue Issue [not null]
  issueId String [not null]
  parent IssueComment
  parentId String
  replies IssueComment [not null]
}

Table Reaction {
  id String [pk]
  reactedAt DateTime [default: `now()`, not null]
  deleted DateTime
  userId String [not null]
  comment IssueComment [not null]
  commentId String [not null]
  emoji Emoji [not null]
  emojiId String [not null]

  indexes {
    (emojiId, commentId, userId) [unique]
  }
}

Table Emoji {
  id String [pk]
  name String [unique, not null]
  reactions Reaction [not null]
}

Table IssueHistory {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted DateTime
  userId String [not null]
  issue Issue [not null]
  issueId String [not null]
  addedLabelIds String[] [not null]
  removedLabelIds String[] [not null]
  fromPriority Int
  toPriority Int
  fromStateId String
  toStateId String
  fromEstimate Int
  toEstimate Int
  fromAssigneeId String
  toAssigneeId String
  fromParentId String
  toParentId String
  relationChanges Json[] [not null]
}

Table IntegrationDefinition {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted DateTime
  name String [not null]
  icon String [not null]
  spec Json [not null]
  clientId String [not null]
  clientSecret String [not null]
  scopes String [not null]
  IntegrationAccount IntegrationAccount [not null]
}

Table IntegrationAccount {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleted DateTime
  integrationConfiguration Json [not null]
  integrationDefinition IntegrationDefinition [not null]
  integrationDefinitionId String [not null]
  workspace Workspace [not null]
  workspaceId String [not null]
}

Enum Preference {
  ISSUE_ESTIMATES
  PRIORITIES
}

Enum Role {
  ADMIN
  USER
}

Enum Status {
  ACTIVE
  SUSPENDED
}

Enum ModelName {
  Workspace
  Team
  TeamPreference
  Issue
  Label
  Workflow
  Template
  IssueComment
  IssueHistory
  UsersOnWorkspaces
}

Enum ActionType {
  I
  U
  D
}

Enum WorkflowCategory {
  BACKLOG
  UNSTARTED
  STARTED
  COMPLETED
  CANCELED
}

Enum TemplateCategory {
  ISSUE
  PROJECT
  DOCUMENT
}

Ref: UsersOnWorkspaces.userId > User.id

Ref: UsersOnWorkspaces.workspaceId > Workspace.id

Ref: Team.workspaceId > Workspace.id

Ref: Label.workspaceId > Workspace.id

Ref: Label.teamId > Team.id

Ref: Label.groupId - Label.id

Ref: Template.createdById > User.id

Ref: Template.workspaceId > Workspace.id

Ref: Template.teamId > Team.id

Ref: Workflow.teamId > Team.id

Ref: TeamPreference.teamId > Team.id

Ref: SyncAction.workspaceId > Workspace.id

Ref: Issue.teamId > Team.id

Ref: Issue.createdById > User.id

Ref: Issue.parentId - Issue.id

Ref: IssueComment.issueId > Issue.id

Ref: IssueComment.parentId - IssueComment.id

Ref: Reaction.commentId > IssueComment.id

Ref: Reaction.emojiId > Emoji.id

Ref: IssueHistory.issueId > Issue.id

Ref: IntegrationAccount.integrationDefinitionId > IntegrationDefinition.id

Ref: IntegrationAccount.workspaceId > Workspace.id